Fix header 'z-index'

--- a/assets/scss/layout/header/_header.scss
+++ b/assets/scss/layout/header/_header.scss
@@ -18,7 +18,7 @@ $header-box-shadow: 0 5px 20px $base-box-shadow-color !default;
     width: 100%;
     background-color: $header-background-color;
     box-shadow: $header-box-shadow;
-    z-index: 2;
+    z-index: 100;
 
     a {
         @include reset-link;
